# gpu-patterns

./: .gitignore  MANIFEST.in  README.md  bench.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
gpu_patterns/: __init__.py
gpu_patterns/scripts/: launch.py
kernels/: kernels.cu  ops.cpp
patterns/: __init__.py
patterns/cpu_patterns/: __init__.py
patterns/cpu_patterns/kernels/: prefix_sum.cpp
patterns/gpu_patterns/: __init__.py
patterns/gpu_patterns/kernels/: kernels.cu  ops.cpp  prefix_sum.cu
python/: launch.py
