[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-patterns"
version = "0.1.0"
description = "Common CPU and GPU Parallel Patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_patterns*", "cpu_patterns*"]

[tool.setuptools.package-data]
gpu_patterns = ["gpu_patterns/kernels/*"]
