[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patterns"
version = "0.1.0"
description = "Common CPU and GPU Parallel Patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "jupyter",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["patterns*"]

[tool.setuptools.package-data]
gpu_patterns = ["patterns/gpu_patterns/kernels/*"]
